# hf-jobsx

./: .gitignore  AGENTS.md  LOCAL-TEST.sh  README.md  SPEC.md  pyproject.toml  test
.github/workflows/: ci.yml
demo/: hf-jobsx-demo.cast  make_cast.py
examples/: README.md  hello-jobs.py  image-mode-vllm.py
experiments/run-header-dogfood/: README.md  glm-ocr.py  unlimited-ocr-vllm.py
scripts/: keyprobe.py
src/hf_jobsx/: __init__.py  __main__.py  cli.py  fake.py  jobs_client.py  metrics.py  pick.py  render.py  runspec.py  selectors.py
tests/: test_metrics.py  test_render.py  test_runspec.py  test_selectors.py  test_smoke.py
